<resources>
    <string name="app_name">MetaDesign Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="title_activity_profile">Profile</string>
    <string name="address">Address</string>
    <string name="number">Phone Number</string>
    <string name="designation">Designation</string>
    <string name="depart">Department</string>
    <string name="income">Income</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
